Add styles for UI elements

--- a/subscriber/subscriber-server/src/main/resources/index.html
+++ b/subscriber/subscriber-server/src/main/resources/index.html
@@ -5,6 +5,8 @@
     <title>ScalaJS react template</title>
     <!-- Include JavaScript dependencies -->
     <script type="text/javascript" src="subscriber-client-jsdeps.js"></script>
+    <link rel="stylesheet" href="res/bootstrap.css">
+    <link rel="stylesheet" href="res/app.css">
 </head>
 <body>
 
